--- a/debian/control
+++ b/debian/control
@@ -17,8 +17,8 @@ Build-Depends:
  libunique-dev
 Standards-Version: 3.9.6
 Homepage: https://code.google.com/p/transmission-remote-gtk/
-Vcs-Git: git://benjamin.barenblat.name/git/debian-transmission-remote-gtk.git
-Vcs-Browser: http://benjamin.barenblat.name/git/?p=debian-transmission-remote-gtk.git
+Vcs-Git: git://benjamin.barenblat.name/debian-transmission-remote-gtk.git
+Vcs-Browser: https://benjamin.barenblat.name/gitweb/?p=debian-transmission-remote-gtk.git
 
 Package: transmission-remote-gtk
 Architecture: any
