--- a/debian/rules
+++ b/debian/rules
@@ -14,6 +14,9 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 %:
 	dh $@  --with autotools-dev
 
+override_dh_auto_configure:
+	dh_auto_configure -- --disable-silent-rules
+
 override_dh_auto_test:
 	# Tests are broken in v1.1.1.  See upstream issue #233
 	# <https://code.google.com/p/transmission-remote-gtk/issues/detail?id=233>.
