--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Section: net
 Priority: optional
 Maintainer: Benjamin Barenblat <bbaren@mit.edu>
 Build-Depends:
- autotools-dev,
  debhelper (>= 9.0.0),
+ dh-autoreconf,
  intltool (>= 0.35.0),
  libappindicator3-dev,
  libcurl4-gnutls-dev | libcurl-ssl-dev,
