--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,10 @@
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 %:
-	dh $@  --with autotools-dev
+	dh $@  --with autoreconf
+
+override_dh_autoreconf:
+	dh_autoreconf sh -- autogen.sh
 
 override_dh_auto_configure:
 	dh_auto_configure -- --disable-silent-rules
