--- a/debian/rules
+++ b/debian/rules
@@ -1,12 +1,5 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
-
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
 
 # Avoid overlinking and reduce library dependencies.
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
@@ -14,8 +7,10 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 %:
 	dh $@  --with autoreconf
 
+.PHONY: override_dh_autoreconf
 override_dh_autoreconf:
 	dh_autoreconf sh -- autogen.sh
 
+.PHONY: override_dh_auto_configure
 override_dh_auto_configure:
 	dh_auto_configure -- --disable-silent-rules
