--- a/debian/rules
+++ b/debian/rules
@@ -13,4 +13,4 @@ override_dh_autoreconf:
 
 .PHONY: override_dh_auto_configure
 override_dh_auto_configure:
-	dh_auto_configure -- --disable-silent-rules
+	dh_auto_configure -- --without-libappindicator --disable-silent-rules
