--- a/debian/control
+++ b/debian/control
@@ -3,21 +3,24 @@ Section: net
 Priority: optional
 Maintainer: Benjamin Barenblat <bbaren@mit.edu>
 Build-Depends:
+ appstream-util,
+ autoconf-archive,
  debhelper (>= 9.0.0),
  dh-autoreconf,
- intltool (>= 0.35.0),
- libcurl4-gnutls-dev | libcurl-ssl-dev,
- libjson-glib-dev (>= 0.8),
+ intltool (>= 0.50.1),
+ libcurl4-openssl-dev | libcurl-ssl-dev,
  libgeoip-dev,
- libglib2.0-dev (>= 2.22),
- libgtk-3-dev,
+ libglib2.0-dev (>= 2.44),
+ libgtk-3-dev (>= 3.16),
+ libjson-glib-dev (>= 0.8),
  libnotify-dev,
  libproxy-dev,
- libunique-dev
+ libunique-dev,
+ perl,
 Standards-Version: 3.9.8
-Homepage: https://code.google.com/p/transmission-remote-gtk/
-Vcs-Git: git://benjamin.barenblat.name/debian-transmission-remote-gtk.git
-Vcs-Browser: https://benjamin.barenblat.name/gitweb/?p=debian-transmission-remote-gtk.git
+Homepage: https://github.com/transmission-remote-gtk/transmission-remote-gtk
+Vcs-Git: https://github.com/transmission-remote-gtk/transmission-remote-gtk.git
+Vcs-Browser: https://github.com/transmission-remote-gtk/transmission-remote-gtk.git
 
 Package: transmission-remote-gtk
 Architecture: any
