Update upstream dependencies
Notably, set a minimum version requirement for appstream-util. Prior to
0.7.2, `appstream-util validate` would complain if your application ID
did not end in `.desktop`. That requirement was dropped as a result of
https://github.com/hughsie/appstream-glib/issues/146;
transmission-remote-gtk began taking advantage of the looser checking
in dd01b099b7f1807999a08b09bbe06ed2d65aeadd.

Also add an explicit dependency on libappstream-glib-dev, which was previously
being pulled in as a transitive dependency.

--- a/debian/control
+++ b/debian/control
@@ -3,10 +3,11 @@ Section: net
 Priority: optional
 Maintainer: Benjamin Barenblat <bbaren@debian.org>
 Build-Depends:
- appstream-util,
+ appstream-util (>= 0.7.2),
  autoconf-archive,
  debhelper (>= 10.0.0),
- intltool (>= 0.50.1),
+ gettext (>= 0.19.6),
+ libappstream-glib-dev,
  libcurl4-openssl-dev | libcurl-ssl-dev,
  libgeoip-dev,
  libglib2.0-dev (>= 2.44),
